[package]
name = "web-terminal"
description = "A rust app for launching a web terminal that uses websocket."
repository = "https://github.com/j-p-d-e-v/web-terminal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["JP Mateo <jpmateo022@gmail.com>"]
categories = ["asynchronous","network-programming","web-programming","web-programming::websocket","web-programming::http-server"]
keywords = ["websocket", "personal-project","warp","web-terminal","xterm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features =["sink"] }
pretty_env_logger = "0.5.0"
libc = "0.2.155"
nix = { version="0.29.0", default-features = false, features = ["process","hostname","env","term","fs","signal"] }
serde = "1.0.203"
serde_derive = "1.0.203"
tokio = { version="1.37.0", features=["full"] }
warp = "0.3.7"
futures = "0.3.30"
clap = { version="4.5.4", features = ["derive"] }
